--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,11 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
 
 
-
+    def room_version = "2.4.3"
     // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
